welcome.lessons.welcome.methods.picture.PictureMono1.scala.error
PictureMono1:3: error: value avance is not a member of Unit
def faireV() {avance();avance();avance();gauche();avance();peindreSol();recule();gauche();avance();peindreSol();recule();retourne()avance();peindreSol();avance();avance();gauche()}
                                                                                                                                   ^