welcome.lessons.welcome.methods.picture.PictureMono1.scala.code
def peindreSol() {baisseBrosse();leveBrosse()}

def faireV() {avance();avance();avance();gauche();avance();peindreSol();recule();gauche();avance();peindreSol();recule();retourne()avance();peindreSol();avance();avance();gauche()}

for (i <- 1 to 4) {faireV}